--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,10 +11,19 @@
   },
   "dependencies": {
     "@mantine/core": "^7.5.0",
+    "@mantine/form": "^7.17.8",
     "@mantine/hooks": "^7.5.0",
+    "@mantine/modals": "^7.17.8",
+    "@mantine/notifications": "^7.17.8",
     "@monorepo/shared": "workspace:*",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
+    "mantine-datatable": "^7.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
