--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,15 +7,23 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "alert:init": "tsx src/scripts/manage-alerts.ts init-defaults",
+    "alert:list": "tsx src/scripts/manage-alerts.ts list-rules",
+    "alert:stats": "tsx src/scripts/manage-alerts.ts stats",
+    "alert:monitor": "tsx src/scripts/manage-alerts.ts start-monitoring"
   },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "@fastify/multipart": "^8.1.0",
     "@monorepo/shared": "workspace:*",
+    "commander": "^14.0.1",
     "csv-parse": "^5.5.3",
     "fastify": "^4.25.2",
-    "pg": "^8.11.3"
+    "json2csv": "6.0.0-alpha.2",
+    "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
