--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,20 +10,24 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mantine/core": "^7.5.0",
+    "@mantine/charts": "^7.17.8",
+    "@mantine/core": "^8.3.3",
+    "@mantine/dropzone": "^8.3.3",
     "@mantine/form": "^7.17.8",
-    "@mantine/hooks": "^7.5.0",
+    "@mantine/hooks": "^8.3.3",
     "@mantine/modals": "^7.17.8",
     "@mantine/notifications": "^7.17.8",
     "@monorepo/shared": "workspace:*",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "mantine-datatable": "^7.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^5.1.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
