--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "axios": "^1.12.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "form-data": "^4.0.4",
     "prettier": "^3.2.4",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.3"
   },
   "engines": {
